[package]
name = "kcmockserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
serde = { version = "1.0.180", features = ["derive"]}
serde_json = "1.0.104"
http = "0.2.9"
tokio = { version ="1.29.1", features = ["full"] }

[dev-dependencies]
reqwest = { version = "0.11.18", features = ["json", "blocking"] }